# computer-graphics-project-2022

./: .gitignore  CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  Project.cpp  README.md  Truck.cpp  Truck.h  build.zig  definitions.h  models.cpp  view.cpp
.devcontainer/: Dockerfile  devcontainer.json
headers/glm/ext/: matrix_transform.hpp
headers/glm/gtx/: euler_angles.hpp  hash.hpp
models/MonsterTruck/source/: truck.blend
models/MonsterTruck/source/monster truck 3d model/: monster truck.mtl
resources/models/: Truck.mtl  tree.blend  tree.blend1  tree_leaf.mtl  tree_trunk.mtl
resources/models/MonsterTruck/: truck.blend  truck.blend1  wheel.mtl
shaders/: BRDF.frag  BRDF.vert  PhongFrag.spv  PhongShader.frag  PhongVert.spv  SkyBoxFrag.spv  SkyBoxShader.frag  SkyBoxShader.vert  SkyBoxVert.spv  SunSky.frag  SunSky.vert  SunSkyVert.spv  Terrain.frag  Terrain.vert  TerrainFrag.spv  TerrainVert.spv  TextShader.vert  TextVert.spv  compile.sh  shadowmap.vert
src/: Project.cpp  Project.h  Project.hpp
src/gameObjects/: Component.h  Object.cpp  Object.h  Object.hpp  Truck.cpp  Truck.h  Truck.hpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngine.hpp
src/utils/: MatrixUtils.cpp  MatrixUtils.h  MatrixUtils.hpp  Model.h  Model.hpp  definitions.cpp  definitions.h  definitions.hpp
src/worldgen/: Noise.hpp  PerlinNoise.cpp  Terrain.cpp  Terrain.hpp  Tree.cpp  Tree.hpp  models.cpp  models.h  models.hpp
